  in the common case when the data is returned from the underlying socket
  in increments much smaller than bignumber.

- Issue #1857: subprocess.Popen.poll gained an additional _deadstate keyword
  argument in python 2.5, this broke code that subclassed Popen to include its
  own poll method.  Fixed my moving _deadstate to an _internal_poll method.

Extension Modules
-----------------

- Patch #2111: Avoid mmap segfault when modifying a PROT_READ block.

- zlib.decompressobj().flush(value) no longer crashes the interpreter when
  passed a value less than or equal to zero.

- issue2858: Fix potential memory corruption when bsddb.db.DBEnv.lock_get
  and other bsddb.db object constructors raised an exception.

- Issue #3120: On 64-bit Windows the subprocess module was truncating handles.

- Issue #1471: Arguments to fcntl.ioctl are no longer broken on 64-bit OpenBSD
  and similar platforms due to sign extension.

Tests
-----

- Issue #3261: test_cookielib had an improper file encoding specified.

- Patch #2232: os.tmpfile might fail on Windows if the user has no
  permission to create files in the root directory.


Documentation
-------------

Build
-----

Windows
-------


What's New in Python 2.5.2?
===========================

*Release date: 21-Feb-2008*

Extension Modules
-----------------

- Fix deallocation of array objects when allocation ran out of memory.
  Remove array test case that was incorrect on 64-bit systems.

- Bug #2137: Remove test_struct.test_crasher, which was meaningful
  only on 32-bit systems.


What's New in Python 2.5.2c1?
=============================

*Release date: 14-Feb-2008*

Core and builtins
-----------------

- Added checks for integer overflows, contributed by Google. Some are
  only available if asserts are left in the code, in cases where they
  can't be triggered from Python code.

- Issue #2045: Fix an infinite recursion triggered when printing a subclass of